# ko-stock-filter

./: .env.example  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt  run_tests.sh
.github/: WORKFLOW_SETUP.md
.github/workflows/: README.md  integration-tests.yml  pr-checks.yml  unit-tests.yml
config/: README.md  data_collector.yaml  database.yaml  indicator_calculator.yaml  logging.yaml  price_monitor.yaml  redis.yaml  risk_manager.yaml  stock_screener.yaml  trading_engine.yaml
deployment/: .env.production.template  DEPLOYMENT_CHECKLIST.md  QUICKSTART.md  README.md
deployment/docker/: .dockerignore
deployment/logrotate/: stock-trading  stock-trading-docker
deployment/scripts/: backup-database.sh  backup-redis.sh  docker-rolling-update.sh  graceful-restart.sh  health-check.sh  install-systemd.sh  quick-deploy.sh  restore-database.sh  rolling-update.sh  setup-cron.sh  uninstall-systemd.sh
deployment/systemd/: stock-trading-data-collector.service  stock-trading-indicator-calculator.service  stock-trading-orchestrator.service  stock-trading-postgres.service  stock-trading-redis.service  stock-trading-risk-manager.service  stock-trading-stock-screener.service  stock-trading-trading-engine.service
docker/: .dockerignore  Dockerfile.base  Dockerfile.data_collector  Dockerfile.indicator_calculator  Dockerfile.orchestrator  Dockerfile.risk_manager  Dockerfile.stability_calculator  Dockerfile.stock_scorer  Dockerfile.stock_screener  Dockerfile.trading_engine  Dockerfile.watchlist_manager  Dockerfile.web_viewer  docker-compose.full.yml  docker-compose.price-monitor.yml  docker-compose.test.yml  docker-compose.yml  price_monitor.Dockerfile
docker/prometheus/: prometheus.yml
examples/: backtest_example.py  config_usage_example.py  order_execution_example.py  parameter_optimization_example.py  stock_scoring_example.py  trading_signal_example.py
scripts/: README.md  seed_stock_data.py
services/: __init__.py
services/backtesting/: README.md  __init__.py  backtesting_engine.py  data_loader.py  parameter_optimizer.py  performance_metrics.py  report_generator.py
services/data_collector/: README.md  __init__.py  api.py  db_session.py  fundamental_collector.py  main.py  price_collector.py  requirements.txt  scheduler.py  stock_code_collector.py  utils.py
services/indicator_calculator/: README.md  __init__.py  financial_calculator.py  financial_repository.py  financial_service.py  main.py  requirements.txt  run_financial_calculation.py  run_technical_calculation.py  technical_calculator.py  technical_repository.py  technical_service.py
services/orchestrator/: README.md  __init__.py  config.py  main.py  scheduler.py
services/price_monitor/: README.md  __init__.py  config.py  event_publisher.py  main.py  market_calendar.py  price_monitor.py  requirements.txt
services/risk_manager/: README.md  STOP_LOSS_TAKEPROFIT_README.md  __init__.py  api.py  main.py  position_monitor.py  position_sizing.py  (+1 more)
shared/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_financial_calculator.py  test_fundamental_collector.py  test_order_executor.py  test_price_collector.py  test_price_monitor.py  test_seed_stock_data.py  test_stability_calculator.py  test_stock_code_collector.py  test_stock_scorer.py  test_stock_screener.py  test_technical_calculator.py  test_ticker_retrieval.py  test_utilities.py  test_watchlist_manager.py
(+91 files in other folders)
